added admin routes to documentation
